bdr.BDR.scala.error
Compilation error:
BDR:3: error: not found: value char
  if (char getIndication()=='R'){
      ^BDR:7: error: not found: value char
  if (char getIndication()=='L'){
      ^BDR:11: error: not found: value char
  if (char getIndication()=='I'){
      ^BDR:16: error: not found: value char
  if (char getIndication()=='A'){
      ^